--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,3 +1,4 @@
+<app-loading *ngIf="isLoading" class="z-50"></app-loading>
 <div class="fixed inset-0 z-30 flex justify-center items-center bg-black bg-opacity-50">
     <main class="flex relative gap-2.5 items-center justify-center">
         <div class="px-3 py-3 items-center justify-center bg-white rounded-2xl border border-black border-solid w-[453px] mt-20">
