--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,91 @@
-<p>register works!</p>
+<body>
+  <app-headerlog></app-headerlog>
+  <div [class.blur]="isMenuOpen" class="font-['Poppins']">
+    <app-modal 
+      [message]="modalMessage" 
+      [isVisible]="isModalVisible" 
+      (close)="hideModal()">
+    </app-modal>
+      <main class="flex flex-wrap items-center justify-between">
+          <img
+            loading="lazy"
+            src="assets/images/Subscription.png"
+            alt=""
+            class="object-contain self-stretch my-auto aspect-[0.82] min-w-[240px] w-[480px] max-md:max-w-full pb-24"/>
+          <section class="flex flex-col self-stretch my-auto min-w-[240px] w-[829px] max-md:max-w-full pr-20">
+            <div class="flex flex-col self-center max-w-full rounded-none w-[929px]">
+              <div class="flex flex-col px-20 pt-10 pb-7 rounded-3xl border-2 border-white border-solid bg-violet-950 shadow-[5px_5px_4px_rgba(0,0,0,0.6)] max-md:px-5 max-md:max-w-full">
+                <div class="flex flex-col max-md:max-w-full">
+                  <h1 class="text-2xl font-medium text-white max-md:max-w-full text-center">CREATE YOUR ACCOUNT</h1>
+                  <p class="mt-5 text-lg text-white max-md:max-w-full p-2">Please register now!</p>
+                  <form class="flex flex-col mt-5 w-full max-md:max-w-full" [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+                    <div class="flex flex-wrap gap-5 items-start w-full text-xl text-white max-md:max-w-full">
+                      <div class="flex flex-col grow shrink rounded-md w-[160px]">
+                          <label for="firstName" class="z-10 text-sm self-start ml-3 max-md:ml-2.5 text-gray-300 pb-1">First Name</label>
+                          <input required type="text" id="firstName" formControlName="firstName" name="firstName" placeholder="e.g. Chris" class="focus:outline-none w-full px-6 py-2 text-lg rounded-md bg-rose-100 bg-opacity-50 max-md:px-1 max-md:max-w-full text-white">
+                        </div>
+                        <div class="flex flex-col grow shrink rounded-md w-[110px]">
+                          <label for="middleName" class="z-10 text-sm self-start ml-3 max-md:ml-2.5 text-gray-300 pb-1">Middle Name</label>
+                          <input type="text" id="middleName" formControlName="middleName" name="middleName" placeholder="e.g. Pea" class="focus:outline-none w-full px-6 py-2 text-lg rounded-md bg-rose-100 bg-opacity-50 max-md:px-5 max-md:max-w-full text-white">
+                        </div>
+                        <div class="flex flex-col grow shrink rounded-md w-[160px]">
+                          <label for="lastName" class="z-10 text-sm self-start ml-3 max-md:ml-2.5 text-gray-300 pb-1">Last Name</label>
+                          <input required type="text" id="lastName" formControlName="lastName" name="lastName" placeholder="e.g. Bacon" class="focus:outline-none w-full px-6 py-2 text-lg rounded-md bg-rose-100 bg-opacity-50 max-md:px-5 max-md:max-w-full text-white">
+                        </div>
+                    </div>
+
+                    <div class="flex flex-col mt-8 w-full text-xl text-center text-white whitespace-nowrap rounded-md max-md:mt-10 max-md:max-w-full">
+                      <label for="subnum" class="z-10 text-sm self-start ml-5 max-md:ml-2.5 text-gray-300 pb-1">Subscription Number(Required)</label>
+                      <input required type="number" id="subnum" formControlName="subnum" name="subnum" placeholder="e.g. 123456789" class="focus:outline-none w-full px-6 py-2 text-lg rounded-md bg-rose-100 bg-opacity-50 max-md:px-5 max-md:max-w-full text-white input-effect">
+                    </div>
+
+                    <div class="flex flex-col mt-8 w-full text-xl text-center text-white whitespace-nowrap rounded-md max-md:mt-10 max-md:max-w-full">
+                      <label for="email" class="z-10 text-sm self-start ml-5 max-md:ml-2.5 text-gray-300 pb-1">Email</label>
+                      <input required type="email" id="email" formControlName="email" name="email" placeholder="e.g. email@gmail.com" class="focus:outline-none w-full px-6 py-2 text-lg rounded-md bg-rose-100 bg-opacity-50 max-md:px-5 max-md:max-w-full text-white">
+                    </div>
+
+                    <div class="flex flex-col mt-8 w-full rounded-none max-md:mt-10 max-md:max-w-full">
+                      <label for="password" class="z-10 text-sm self-start px-1.5 py-1.5 ml-3 text-center text-gray-300 whitespace-nowrap rounded-md bg-violet-950 max-md:ml-2.5">Password</label>
+                      <div class="flex flex-wrap gap-5 justify-between px-6 py-2 rounded-md bg-rose-100 bg-opacity-50 max-md:px-5 max-md:max-w-full text-black">
+                          <div class="flex items-center w-full bg-transparent">
+                            <input required [type]="passwordFieldType" id="password" formControlName="password" name="password" placeholder="At least 12 characters" class="focus:outline-none flex-grow text-lg bg-transparent">
+                            <img 
+                              [src]="passwordFieldType === 'password' ? 'assets/images/eye-slash.png' : 'assets/images/eye.png'" 
+                              alt="Toggle Password Visibility" 
+                              class="object-contain shrink-0 aspect-square w-[30px] ml-3 cursor-pointer" 
+                              (click)="togglePasswordVisibility()">
+                          </div>
+                        </div>
+                    </div>
+
+                    <div class="flex flex-col mt-8 w-full rounded-none max-md:mt-10 max-md:max-w-full">
+                      <label for="confirmPassword" class="z-10 text-sm self-start px-1.5 py-1.5 ml-3 text-center text-gray-300 whitespace-nowrap rounded-md bg-violet-950 max-md:ml-2.5">Confirm Password</label>
+                      <div class="flex flex-wrap gap-5 justify-between px-6 py-2 rounded-md bg-rose-100 bg-opacity-50 max-md:px-5 max-md:max-w-full text-black">
+                          <div class="flex items-center w-full bg-transparent">
+                            <input required [type]="passwordFieldType" id="confirmPassword" formControlName="confirmPassword" name="confirmPassword" placeholder="Input the same password" class="focus:outline-none flex-grow text-lg bg-transparent">
+                            <img 
+                              [src]="passwordFieldType === 'password' ? 'assets/images/eye-slash.png' : 'assets/images/eye.png'" 
+                              alt="Toggle Password Visibility" 
+                              class="object-contain shrink-0 aspect-square w-[30px] ml-3 cursor-pointer" 
+                              (click)="togglePasswordVisibility()">
+                          </div>
+                        </div>
+                    </div>
+                    <div class="justify-center items-center flex">
+                    <button type="submit" class="self-center mt-8 max-w-full text-lg font-medium text-black rounded-xl w-[200px] px-16 py-1 bg-rose-100 max-md:mt-10 max-md:px-5">SIGN UP</button>&nbsp;&nbsp;&nbsp;
+                    <button type="reset" class="self-center mt-8 max-w-full text-lg font-medium text-black rounded-xl w-[100px] px-16 py-1 bg-red-400 max-md:mt-10 max-md:px-5 flex items-center justify-center">CLEAR</button>
+                    
+                  </div>
+                  </form>
+                </div>
+              </div>
+              <a routerLink="/login"><p class="mt-3.5 text-lg text-center text-white max-md:max-w-full text-shadow-lg">Already have an Account</p></a>
+            </div>
+          </section>
+        </main>
+    <footer class="bottom-0 flex justify-between flex-wrap text-xs text-black rounded-none pt-8 pl-2 pr-2 fixFoot">
+      <p>Copyright © 2024 QBFYI - All Rights Reserved.</p>
+      <p>Powered by Quanby Solutions, Inc.</p>
+    </footer>
+  </div>
+  </body>
