--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
         <ul class="hidden md:flex space-x-8 ml-auto mr-8">
             <li><a href="" class="font-['Poppins'] hover:text-violet-700">RESIDENTIAL</a></li>
             <li><a href="" class="font-['Poppins'] hover:text-violet-700">PRODUCTS</a></li>
-            <li><a href="" class="font-['Poppins'] hover:text-violet-700">CONTACT US</a></li>
+            <li><a href="/contact-page" class="font-['Poppins'] hover:text-violet-700">CONTACT US</a></li>
         </ul>
         <i class="bx bx-menu text-3xl cursor-pointer md:hidden" (click)="toggleMenu()"></i>
     </header>
@@ -24,7 +24,7 @@
         <li><a routerLink="/register" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">REGISTER</a></li>
         <li><a href="" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">RESIDENTIAL</a></li>
         <li><a href="" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">PRODUCTS</a></li>
-        <li><a href="" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">CONTACT US</a></li>
+        <li><a href="/contact-page" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">CONTACT US</a></li>
         <li><a href="" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">SUPPORT</a></li>
         <li><a href="" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">AVAILABILITY MAP</a></li>
         <li><a href="" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">ABOUT US</a></li>
