--- a/src/app/support-page/support-page.component.html
+++ b/src/app/support-page/support-page.component.html
@@ -1,3 +1,4 @@
+<app-loading *ngIf="isLoading"></app-loading>
 <app-header class="fixed top-0 left-0 w-full z-50"></app-header>
 
 <main class="flex relative flex-col items-center pt-32 pb-10 font-semibold text-black min-h-[391px] px-[499px] shadow-[0px_4px_10px_rgba(0,0,0,0.25)] max-md:px-5 max-md:pt-24">
@@ -73,7 +74,7 @@
         <div class="flex flex-col self-stretch my-auto w-[198px]">
           <h2 class="text-sm font-semibold">{{ topic.title }}</h2>
           <p>{{ topic.description }}</p>
-          <a [routerLink]="topic.link" class="text-red-600" [attr.aria-label]="'Learn more about ' + topic.title">Learn more...</a>
+          <a (click)="onLearnMore(topic.link)" class="text-red-600 cursor-pointer" [attr.aria-label]="'Learn more about ' + topic.title">Learn more...</a>
         </div>
       </article>
     </div>
