--- a/src/app/technologicalinnovation/technologicalinnovation.component.html
+++ b/src/app/technologicalinnovation/technologicalinnovation.component.html
@@ -1,3 +1,4 @@
+<app-loading *ngIf="isLoading"></app-loading>
 <app-header class="fixed top-0 left-0 w-full z-50"></app-header>
 
 <div class="min-h-screen flex flex-col">
@@ -68,7 +69,7 @@
           </aside>
           
         <nav class="gap-2.5 self-stretch p-2.5 mt-10 text-xl font-light text-center text-pink-700 mb-10">
-          <a routerLink="/support-page" class="hover:underline">← Back to Support page</a>
+          <a (click)="onSupportClick()" class="hover:underline cursor-pointer">← Back to Support page</a>
         </nav>
           
       </main>
