--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -15,3 +15,18 @@ body{
   width: 100%;
 }
 
+
+.animate__fadeInUp {
+  animation: fadeInUp 0.5s ease-out;
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
