--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <app-headerlog></app-headerlog>
     <div [class.blur]="isMenuOpen" class="font-['Poppins']">
       <div *ngIf="errorMessage" class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50">
-        <div class="bg-white rounded-lg p-6 w-96 text-center shadow-lg">
+        <div class="bg-white rounded-lg p-6 w-96 text-center shadow-lg animate__animated animate__fadeInUp">
           <h2 class="text-xl font-semibold mb-4 text-red-500">Error</h2>
           <p>{{ errorMessage }}</p>
           <button (click)="closeError()" class="mt-6 px-4 py-2 bg-red-500 text-white z-50 rounded-md">Close</button>
