--- a/src/app/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page.component.html
@@ -1,4 +1,3 @@
-
 <app-header class="z-10 fixed top-0 left-0 w-full"></app-header>
 <div class="flex flex-col rounded-none pt-[100px]">
   <h2
@@ -20,47 +19,72 @@
         <i class="fas fa-cogs icon"></i>
         <h3>SELF SERVICE APPLICATION</h3>
       </div>
-      <br>
+      <br />
       <button>Apply Now</button>
     </div>
     <div class="content-box call-button">
-    <div class="content-header">
-      <i class="fas fa-phone-alt icon"></i>
-      <h3>CALL OUR SALES HOTLINE</h3>
+      <div class="content-header">
+        <i class="fas fa-phone-alt icon"></i>
+        <h3>CALL OUR SALES HOTLINE</h3>
+      </div>
+      <br />
+      <button (click)="openCallModal()">Call Now</button>
     </div>
-    <br />
-    <button (click)="openCallModal()">Call Now</button>
-  </div>
-  <div class="content-box">
-    <div class="content-header">
-      <i class="fas fa-envelope icon"></i>
-      <h3>WE'LL CONTACT YOU</h3>
+    <div class="content-box">
+      <div class="content-header">
+        <i class="fas fa-envelope icon"></i>
+        <h3>WE'LL CONTACT YOU</h3>
+      </div>
+      <br />
+      <button (click)="openLearnMoreModal()">Learn more</button>
     </div>
-    <br />
-    <button (click)="openLearnMoreModal()">Learn more</button>
   </div>
-</div>
-  <div *ngIf="showCallModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+  <div
+    *ngIf="showCallModal"
+    class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
+  >
     <div class="bg-white p-5 rounded-md shadow-lg max-w-sm w-full">
       <h3 class="text-lg font-semibold mb-3">Call Our Sales Hotline</h3>
       <p class="mb-4">You can call us at:</p>
       <ul>
-        <li class="mb-2"><a href="tel:+0524311169" class="text-blue-600 hover:underline">+052-431-1169</a></li>
-        <li><a href="tel:09274786102" class="text-blue-600 hover:underline">+63 927 478 6102</a></li>
+        <li class="mb-2">
+          <a href="tel:+0524311169" class="text-blue-600 hover:underline"
+            >+052-431-1169</a
+          >
+        </li>
+        <li>
+          <a href="tel:09274786102" class="text-blue-600 hover:underline"
+            >+63 927 478 6102</a
+          >
+        </li>
       </ul>
-      <button (click)="closeCallModal()" class="mt-4 bg-pink-600 ml-36 text-white py-2 px-4 rounded">Close</button>
+      <button
+        (click)="closeCallModal()"
+        class="mt-4 bg-pink-600 ml-36 text-white py-2 px-4 rounded"
+      >
+        Close
+      </button>
     </div>
   </div>
-<div *ngIf="showLearnMoreModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+  <div
+    *ngIf="showLearnMoreModal"
+    class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
+  >
     <div class="bg-white p-5 rounded-md shadow-lg max-w-sm w-full">
       <h3 class="text-lg font-semibold mb-3">Learn More</h3>
       <p class="mb-4">
-        To learn more, please navigate to the 
-        <strong class="font-extrabold">"GET IN TOUCH"</strong> section, so we can contact you directly.
+        To learn more, please navigate to the
+        <strong class="font-extrabold">"GET IN TOUCH"</strong> section, so we
+        can contact you directly.
       </p>
-      <button (click)="closeLearnMoreModal()" class="mt-4 bg-pink-600 ml-36 text-white py-2 px-4 rounded">Close</button>
+      <button
+        (click)="closeLearnMoreModal()"
+        class="mt-4 bg-pink-600 ml-36 text-white py-2 px-4 rounded"
+      >
+        Close
+      </button>
     </div>
-  </div>  
+  </div>
   <br />
   <div>
     <div class="flex justify-between">
@@ -84,11 +108,8 @@
             class="object-contain shrink-0 self-start aspect-square w-[30px]"
           />
           <p class="flex-auto w-[359px]">
-            Quanby Solutions, Inc.
-            Landco Business Park, F.
-            Imperial St, Legazpi Port
-            District, Legazpi City,
-            4500 Albay
+            Quanby Solutions, Inc. Landco Business Park, F. Imperial St, Legazpi
+            Port District, Legazpi City, 4500 Albay
           </p>
         </address>
         <div class="flex gap-2.5 mt-3.5 max-md:ml-1.5">
@@ -100,32 +121,34 @@
           />
           <p class="basis-auto">
             <span class="text-black">+052-431-1169 / 0927 478 6102</span>
+          </p>
         </div>
+
         <div class="flex gap-1.5 mt-3 text-2xl whitespace-nowrap items-center">
-            <img
-              loading="lazy"
-              src="https://cdn.builder.io/api/v1/image/assets/TEMP/d0e0c1bdf343b49cf43504ab50a31816e81eb3b6a6fe4f92ebb078cb4bae7d38?placeholderIfAbsent=true&apiKey=6e9054e1e2c94876a613fb2760953dbc"
-              alt="Hours Icon"
-              class="object-contain shrink-0 aspect-square w-[30px]"
-            />
-            <h2 class="text-2xl font-semibold">Hours</h2>
-          </div>
-          <div class="flex flex-col ml-5 max-md:ml-2.5">
-            <select
-              id="hours-dropdown"
-              class="bg-white border rounded-md px-3 py-2 text-lg"
-              (change)="onDropdownChange($event)"
+          <img
+            loading="lazy"
+            src="https://cdn.builder.io/api/v1/image/assets/TEMP/d0e0c1bdf343b49cf43504ab50a31816e81eb3b6a6fe4f92ebb078cb4bae7d38?placeholderIfAbsent=true&apiKey=6e9054e1e2c94876a613fb2760953dbc"
+            alt="Hours Icon"
+            class="object-contain shrink-0 aspect-square w-[30px]"
+          />
+          <h2 class="text-2xl font-semibold">Hours</h2>
+        </div>
+        <div class="flex flex-col ml-5 max-md:ml-2.5">
+          <select
+            id="hours-dropdown"
+            class="bg-white border rounded-md px-3 py-2 text-lg"
+            (change)="onDropdownChange($event)"
+          >
+            <option
+              *ngFor="let hour of hours"
+              [value]="hour.value"
+              [ngClass]="{ highlighted: hour.value === currentDay }"
             >
-              <option
-                *ngFor="let hour of hours"
-                [value]="hour.value"
-                [ngClass]="{'highlighted': hour.value === currentDay}"
-              >
-                {{ hour.label }}
-              </option>
-            </select>
-          </div>
-          
+              {{ hour.label }}
+            </option>
+          </select>
+        </div>
+
         <a
           routerLink="/contact-form"
           class="gap-2.5 self-center p-2.5 mt-14 text-3xl font-bold text-white bg-pink-600 rounded max-md:mt-10 transition-transform transform hover:scale-105 hover:bg-pink-600"
@@ -154,6 +177,8 @@
   </div>
   <br />
   <div>
-  <br>
-  <br>
-  <app-footer></app-footer>
+    <br />
+    <br />
+    <app-footer></app-footer>
+  </div>
+</div>
