--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,6 +1,5 @@
 <div class="modal" *ngIf="isVisible">
   <div class="modal-content animate__animated animate__fadeInUp">
-    <span class="close" (click)="onClose()">&times;</span>
     <div class="modal-body flex justify-evenly self-center items-center">
       <img src="assets/images/success-icon.gif" alt="Success Icon" class="modal-icon" *ngIf="message.includes('successful')">
       <img src="assets/images/error-icon.png" alt="Error Icon" class="modal-icon" *ngIf="message.includes('Error')">
@@ -8,7 +7,8 @@
         {{ message }}
       </p>
     </div>
-    <div class="modal-footer">
+    <!-- Conditionally render the modal-footer based on the message -->
+    <div class="modal-footer" *ngIf="!message.includes('successful')">
       <button class="btn btn-primary" (click)="onClose()">OK</button>
     </div>
   </div>
