--- a/src/app/address-book/address-book.component.html
+++ b/src/app/address-book/address-book.component.html
@@ -26,7 +26,7 @@
     />
     <div class="flex gap-2.5">
       <button
-        routerLink="/profile"
+        routerLink="/profile-settings"
         class="gap-2.5 self-stretch px-8 py-3.5 my-auto text-sm text-white whitespace-nowrap rounded-3xl bg-pink-700 min-h-[45px] max-md:px-5"
       >
         PROFILE
