--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -6,16 +6,27 @@
   >
     <div class="self-stretch my-auto text-2xl font-light text-pink-700">
       ←
-      <span routerLink="/landing-page" class="underline cursor-pointer">Back to Home</span>
+      <span routerLink="/landing-page" class="underline cursor-pointer"
+        >Back to Home</span
+      >
     </div>
     <img
       loading="lazy"
-      srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/74bda4516d8405197c60c6976f7bf31f2a271677e40fcb1fbdb2896761a2fb3d?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/74bda4516d8405197c60c6976f7bf31f2a271677e40fcb1fbdb2896761a2fb3d?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/74bda4516d8405197c60c6976f7bf31f2a271677e40fcb1fbdb2896761a2fb3d?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/74bda4516d8405197c60c6976f7bf31f2a271677e40fcb1fbdb2896761a2fb3d?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/74bda4516d8405197c60c6976f7bf31f2a271677e40fcb1fbdb2896761a2fb3d?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/74bda4516d8405197c60c6976f7bf31f2a271677e40fcb1fbdb2896761a2fb3d?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/74bda4516d8405197c60c6976f7bf31f2a271677e40fcb1fbdb2896761a2fb3d?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/74bda4516d8405197c60c6976f7bf31f2a271677e40fcb1fbdb2896761a2fb3d?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc"
+      srcset="
+        https://cdn.builder.io/api/v1/image/assets/TEMP/74bda4516d8405197c60c6976f7bf31f2a271677e40fcb1fbdb2896761a2fb3d?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=100   100w,
+        https://cdn.builder.io/api/v1/image/assets/TEMP/74bda4516d8405197c60c6976f7bf31f2a271677e40fcb1fbdb2896761a2fb3d?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=200   200w,
+        https://cdn.builder.io/api/v1/image/assets/TEMP/74bda4516d8405197c60c6976f7bf31f2a271677e40fcb1fbdb2896761a2fb3d?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=400   400w,
+        https://cdn.builder.io/api/v1/image/assets/TEMP/74bda4516d8405197c60c6976f7bf31f2a271677e40fcb1fbdb2896761a2fb3d?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=800   800w,
+        https://cdn.builder.io/api/v1/image/assets/TEMP/74bda4516d8405197c60c6976f7bf31f2a271677e40fcb1fbdb2896761a2fb3d?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=1200 1200w,
+        https://cdn.builder.io/api/v1/image/assets/TEMP/74bda4516d8405197c60c6976f7bf31f2a271677e40fcb1fbdb2896761a2fb3d?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=1600 1600w,
+        https://cdn.builder.io/api/v1/image/assets/TEMP/74bda4516d8405197c60c6976f7bf31f2a271677e40fcb1fbdb2896761a2fb3d?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=2000 2000w,
+        https://cdn.builder.io/api/v1/image/assets/TEMP/74bda4516d8405197c60c6976f7bf31f2a271677e40fcb1fbdb2896761a2fb3d?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc
+      "
       class="object-contain shrink-0 self-start max-w-full aspect-[1.09] w-[120px]"
     />
     <div class="flex gap-2.5">
       <button
-        routerLink="/profile"
+        routerLink="/profile-settings"
         class="gap-2.5 self-stretch px-8 py-3.5 my-auto text-sm text-white whitespace-nowrap rounded-3xl bg-pink-700 min-h-[45px] max-md:px-5"
       >
         PROFILE
@@ -29,65 +40,110 @@
     </div>
   </div>
 </div>
-  <br>
-  <div class="ml-10 mt-5 flex flex-row space-x-6">
-    <div class="flex flex-col text-xl rounded-[10px] overflow-hidden text-white w-[360px]">
-      <div class="gap-2 self-stretch px-6 py-6 font-semibold text-center bg-zinc-700 min-h-[80px]">
-        Welcome, Jose Rizal
-      </div>
-      <div class="flex flex-col justify-center items-start px-6 py-3 w-full font-light text-black bg-zinc-300 min-h-[160px]">
-        <div class="flex flex-col items-start w-full">
-          <a routerLink="/profile-settings" class="mt-4 text-center hover:underline text-pink-700 font-thin mb-2">Your Account</a>
-          <a routerLink="/change-email" class="mt-4 text-center hover:underline font-thin mb-2">Change Email Address</a>
-          <a routerLink="/change-password" class="mt-4 text-center hover:underline font-thin mb-2">Change Password</a>
-          <a routerLink="/address-book" class="mt-4 text-center hover:underline font-thin mb-2">Address Book</a>
-          <a routerLink="/inbox" class="mt-4 text-center hover:underline font-thin mb-2">Inbox</a>
-        </div>
+<br />
+<div class="ml-10 mt-5 flex flex-row space-x-6">
+  <div
+    class="flex flex-col text-xl rounded-[10px] overflow-hidden text-white w-[360px]"
+  >
+    <div
+      class="gap-2 self-stretch px-6 py-6 font-semibold text-center bg-zinc-700 min-h-[80px]"
+    >
+      Welcome, Jose Rizal
+    </div>
+    <div
+      class="flex flex-col justify-center items-start px-6 py-3 w-full font-light text-black bg-zinc-300 min-h-[160px]"
+    >
+      <div class="flex flex-col items-start w-full">
+        <a
+          routerLink="/profile-settings"
+          class="mt-4 text-center hover:underline text-pink-700 font-thin mb-2"
+          >Your Account</a
+        >
+        <a
+          routerLink="/change-email"
+          class="mt-4 text-center hover:underline font-thin mb-2"
+          >Change Email Address</a
+        >
+        <a
+          routerLink="/change-password"
+          class="mt-4 text-center hover:underline font-thin mb-2"
+          >Change Password</a
+        >
+        <a
+          routerLink="/address-book"
+          class="mt-4 text-center hover:underline font-thin mb-2"
+          >Address Book</a
+        >
+        <a
+          routerLink="/inbox"
+          class="mt-4 text-center hover:underline font-thin mb-2"
+          >Inbox</a
+        >
       </div>
     </div>
-    <div class="flex flex-col w-[50%] max-md:w-full mr-12">
-      <div class="flex flex-col w-full text-center max-md:mt-8 max-md:max-w-full">
-        <div class="flex flex-wrap gap-4 justify-between mr-4 text-2xl font-medium text-pink-700 max-md:mr-1 max-md:max-w-full">
-          <div>Your Account</div>
-          <img
-            loading="lazy"
-            srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/37a99c94ac3c65d6f1cf689c84901d562847f1424b558088b3fa9cdf0408a5b3?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/37a99c94ac3c65d6f1cf689c84901d562847f1424b558088b3fa9cdf0408a5b3?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/37a99c94ac3c65d6f1cf689c84901d562847f1424b558088b3fa9cdf0408a5b3?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/37a99c94ac3c65d6f1cf689c84901d562847f1424b558088b3fa9cdf0408a5b3?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/37a99c94ac3c65d6f1cf689c84901d562847f1424b558088b3fa9cdf0408a5b3?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/37a99c94ac3c65d6f1cf689c84901d562847f1424b558088b3fa9cdf0408a5b3?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/37a99c94ac3c65d6f1cf689c84901d562847f1424b558088b3fa9cdf0408a5b3?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=2000 2000w"
-            class="object-contain shrink-0 my-auto w-8 aspect-square"
-          />
-        </div>
-        <div class="flex flex-wrap gap-6 pr-10 mt-4 bg-pink-700 bg-opacity-10 font-[275] max-md:pr-4">
-          <div class="flex shrink-0 bg-pink-700 bg-opacity-50 h-[100px] w-[5px]"></div>
-          <div class="flex flex-col my-auto">
-            <div class="text-xl text-pink-700">No Linked Account</div>
-            <div class="text-lg text-black text-opacity-50 max-md:mr-1">
-              Please link an account
-            </div>
+  </div>
+  <div class="flex flex-col w-[50%] max-md:w-full mr-12">
+    <div class="flex flex-col w-full text-center max-md:mt-8 max-md:max-w-full">
+      <div
+        class="flex flex-wrap gap-4 justify-between mr-4 text-2xl font-medium text-pink-700 max-md:mr-1 max-md:max-w-full"
+      >
+        <div>Your Account</div>
+        <img
+          loading="lazy"
+          srcset="
+            https://cdn.builder.io/api/v1/image/assets/TEMP/37a99c94ac3c65d6f1cf689c84901d562847f1424b558088b3fa9cdf0408a5b3?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=100   100w,
+            https://cdn.builder.io/api/v1/image/assets/TEMP/37a99c94ac3c65d6f1cf689c84901d562847f1424b558088b3fa9cdf0408a5b3?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=200   200w,
+            https://cdn.builder.io/api/v1/image/assets/TEMP/37a99c94ac3c65d6f1cf689c84901d562847f1424b558088b3fa9cdf0408a5b3?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=400   400w,
+            https://cdn.builder.io/api/v1/image/assets/TEMP/37a99c94ac3c65d6f1cf689c84901d562847f1424b558088b3fa9cdf0408a5b3?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=800   800w,
+            https://cdn.builder.io/api/v1/image/assets/TEMP/37a99c94ac3c65d6f1cf689c84901d562847f1424b558088b3fa9cdf0408a5b3?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=1200 1200w,
+            https://cdn.builder.io/api/v1/image/assets/TEMP/37a99c94ac3c65d6f1cf689c84901d562847f1424b558088b3fa9cdf0408a5b3?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=1600 1600w,
+            https://cdn.builder.io/api/v1/image/assets/TEMP/37a99c94ac3c65d6f1cf689c84901d562847f1424b558088b3fa9cdf0408a5b3?placeholderIfAbsent=true&apiKey=cf984b25863544df9e246b013e059ebc&width=2000 2000w
+          "
+          class="object-contain shrink-0 my-auto w-8 aspect-square"
+        />
+      </div>
+      <div
+        class="flex flex-wrap gap-6 pr-10 mt-4 bg-pink-700 bg-opacity-10 font-[275] max-md:pr-4"
+      >
+        <div
+          class="flex shrink-0 bg-pink-700 bg-opacity-50 h-[100px] w-[5px]"
+        ></div>
+        <div class="flex flex-col my-auto">
+          <div class="text-xl text-pink-700">No Linked Account</div>
+          <div class="text-lg text-black text-opacity-50 max-md:mr-1">
+            Please link an account
           </div>
-        </div>
-        <div class="px-8 py-1 mt-6 text-lg font-medium text-white bg-gray-800 rounded-t-md text-left max-md:px-4 max-md:max-w-full">
-          Please link an account
-        </div>
-        <div class="mr-6 flex flex-col px-8 py-6 w-full rounded-b-[8px] bg-neutral-400 bg-opacity-70 max-md:px-4 max-md:max-w-full">
-          <div class="flex flex-wrap gap-3 self-start text-base font-[275]">
-            <div class="flex-grow">
-              <input
-                type="number"
-                placeholder="Enter your Account Number"
-                class="w-full px-4 py-2 rounded-3xl border border-solid bg-white bg-opacity-70 border-neutral-500 text-black placeholder-black placeholder-opacity-50 max-md:px-4"
-              />
-            </div>
-            <div class="flex-auto my-auto text-black text-opacity-70">
-              Where can I check my Account Number?
-            </div>
-          </div>
-          <button (click)="linkAccount()" class="self-end px-4 py-2 mt-4 text-sm font-semibold text-white bg-pink-700 rounded-xl hover:bg-pink-800 transition duration-300">
-            Link Account
-          </button>          
         </div>
       </div>
+      <div
+        class="px-8 py-1 mt-6 text-lg font-medium text-white bg-gray-800 rounded-t-md text-left max-md:px-4 max-md:max-w-full"
+      >
+        Please link an account
+      </div>
+      <div
+        class="mr-6 flex flex-col px-8 py-6 w-full rounded-b-[8px] bg-neutral-400 bg-opacity-70 max-md:px-4 max-md:max-w-full"
+      >
+        <div class="flex flex-wrap gap-3 self-start text-base font-[275]">
+          <div class="flex-grow">
+            <input
+              type="number"
+              placeholder="Enter your Account Number"
+              class="w-full px-4 py-2 rounded-3xl border border-solid bg-white bg-opacity-70 border-neutral-500 text-black placeholder-black placeholder-opacity-50 max-md:px-4"
+            />
+          </div>
+          <div class="flex-auto my-auto text-black text-opacity-70">
+            Where can I check my Account Number?
+          </div>
+        </div>
+        <button
+          (click)="linkAccount()"
+          class="self-end px-4 py-2 mt-4 text-sm font-semibold text-white bg-pink-700 rounded-xl hover:bg-pink-800 transition duration-300"
+        >
+          Link Account
+        </button>
+      </div>
     </div>
+  </div>
 
-<app-success-modal [isVisible]="showSuccessModal"></app-success-modal>
-
-    
-
+  <app-success-modal [isVisible]="showSuccessModal"></app-success-modal>
+</div>
