working upload image in contact-form

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,20 +1,25 @@
 <footer class="flex flex-col justify-center">
-    <section class="flex flex-col self-center max-w-full text-2xl font-semibold whitespace-nowrap text-violet-950">
+
+  <section class="flex flex-col self-center max-w-full text-2xl font-semibold whitespace-nowrap text-violet-950">
       <h2 class="self-start">SOCIAL</h2>
-      <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/3d0fadd7675b615d9dd8438010e4d2f0cd7ce4621803d6aba2af3a3be3ffdd71?placeholderIfAbsent=true&apiKey=f814d152556d45aeb58d44f206a3cbd4" alt="Social media banner" class="object-contain mt-5 w-full max-md:max-w-full" />
-    </section>
-    <div class="flex flex-wrap gap-7 justify-center items-center mt-7 w-full text-white font-[275] max-md:max-w-full">
-      <a href="#" aria-label="Social media link">
-        <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/bfd6590624baffa6a849a9519878f361f730f55d5d634d56d9e61b7f10c9ee70?placeholderIfAbsent=true&apiKey=f814d152556d45aeb58d44f206a3cbd4" alt="" class="object-contain shrink-0 self-stretch my-auto w-10 aspect-square" />
+      <img loading="lazy" src="assets/images/FL.png" alt="Social media banner" class="object-contain mt-5 w-full max-md:max-w-full" />
+  </section>
+
+  <div class="flex flex-wrap gap-7 justify-center items-center mt-7 w-full text-white font-[275] max-md:max-w-full mb-5">
+
+      <a href="https://www.facebook.com/profile.php?id=61561282452696" aria-label="Facebook profile" target="_blank" rel="noopener noreferrer">
+      <img loading="lazy" src="assets/images/facebok.png" alt="Facebook profile picture" class="object-contain shrink-0 self-stretch my-auto w-10 aspect-square" />
       </a>
-      <a href="#" aria-label="Social media link">
-        <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/dcbecf7d61fad595f39158da04b62367ac6ebe3507d95a5e7af9b6044ad4e987?placeholderIfAbsent=true&apiKey=f814d152556d45aeb58d44f206a3cbd4" alt="" class="object-contain shrink-0 self-stretch my-auto w-10 aspect-square" />
+      <a href="https://www.youtube.com/@QuanbySolutions" aria-label="YouTube channel" target="_blank" rel="noopener noreferrer">
+      <img loading="lazy" src="assets/images/youtube.png" alt="YouTube channel picture" class="object-contain shrink-0 self-stretch my-auto w-10 aspect-square" />
       </a>
-      <div class="flex flex-col grow shrink justify-center items-center self-stretch py-10 my-auto shadow-sm bg-zinc-700 min-h-[140px] px-[450px] rounded-[30px_30px_0px_0px] max-md:px-5 ">
-        <div class="flex flex-col max-w-full text-center">
-          <p class="text-base">Copyright © 2024 QBFYI - All Rights Reserved.</p>
-          <p class="self-center mt-5 text-xs text-center">Powered by Quanby Solutions, Inc.</p>
-        </div>
+
+  </div>
+
+    <div class="flex flex-col grow shrink justify-center items-center  text-white font-[275] self-stretch py-10 my-auto shadow-sm bg-zinc-700 min-h-[140px] px-[450px] rounded-[30px_30px_0px_0px] max-md:px-5 ">
+      <div class="flex flex-col max-w-full text-center">
+        <p class="text-base">Copyright © 2024 QBFYI - All Rights Reserved.</p>
+        <p class="self-center mt-5 text-xs text-center">Powered by Quanby Solutions, Inc.</p>
       </div>
     </div>
-  </footer>
+</footer>
