--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,12 +21,12 @@
     <ul class="space-y-4">
         
         <li *ngIf="shouldShowSignIn()">
-            <a (click)="onLoginClick()" (click)="toggleMenu()" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">
+            <a (click)="onLoginClick()" (click)="toggleMenu()" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300" style="cursor: pointer;">
                 SIGN IN
             </a>
         </li>
         <li>
-            <a (click)="onRegisterClick()" (click)="toggleMenu()" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">
+            <a (click)="onRegisterClick()" (click)="toggleMenu()" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300" style="cursor: pointer;">
                 REGISTER
             </a>
         </li>
@@ -41,11 +41,11 @@
                 PRODUCTS
             </a>
         </li>-->
-        <li><a (click)="onContactUsClick()" (click)="toggleMenu()" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">CONTACT US</a></li>
+        <li><a (click)="onContactUsClick()" (click)="toggleMenu()" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300" style="cursor: pointer;">CONTACT US</a></li>
 
-        <li><a (click)="onSupportPageClick()" (click)="toggleMenu()" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">SUPPORT</a></li>
-        <li><a (click)="onLocationAvailabilityClick()" (click)="toggleMenu()" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">AVAILABILITY MAP</a></li>
-        <li><a (click)="onAboutUsClick()" (click)="toggleMenu()" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">ABOUT US</a></li>
+        <li><a (click)="onSupportPageClick()" (click)="toggleMenu()" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300" style="cursor: pointer;">SUPPORT</a></li>
+        <li><a (click)="onLocationAvailabilityClick()" (click)="toggleMenu()" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300" style="cursor: pointer;">AVAILABILITY MAP</a></li>
+        <li><a (click)="onAboutUsClick()" (click)="toggleMenu()" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300" style="cursor: pointer;">ABOUT US</a></li>
         <!--<li><a (click)="onSubscribeClick()" (click)="toggleMenu()" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">SUBSCRIBE</a></li>
         <li><a (click)="onCustomerServiceClick()" (click)="toggleMenu()" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">CUSTOMER SERVICE</a></li>
         <li><a (click)="onFeedbackClick()" (click)="toggleMenu()" class="block font-['Poppins'] text-lg hover:bg-pink-700 hover:text-white hover:pl-1 hover:border-b-2 transition-all duration-300">FEEDBACK</a></li>-->
